Added Yeti sample
