# api/factcheck.py
@@ -54,38 +54,25 @@ def create_index(CreateIndexRequest):
         active_indexes = pinecone.list_indexes()
         if index in active_indexes:
           return {
-            'status': True,
+            'status': "finished",
             'message': f'Index {index} in environment {pine_env} already active'
           }
 
         pinecone.create_index(index, dimension=1536, metric='cosine', pods=1, replicas=1)
         logger.info(f'Created Pinecone index {index} in environment {pine_env}')
         return {
-          'status': True,
+          'status': "finished",
           'message': f'Successfully created index {index} in environment {pine_env}'
         }
     except Exception as error:
         logger.error(f'Creating Pinecone index {index} in environment {pine_env} failed: {format(error)}')
         # handle the exception
         return {
-          'status': False,
-          'message': f'Creating index {index} in environment {pine_env} failed: {format(error)}'
+          'status': "failed",
+          'err': f'Creating index {index} in environment {pine_env} failed: {format(error)}'
         }
 
 def upload_factcheck_documents_worker(logger, worker_name, req_queue, res_queue, err_queue, UploadFactcheckDocumentRequest):
-    """
-        Uploads embeddings to Pinecone index.
-
-        inputs: index (string) - name of pinecone index to store embeddings
-                environment (string) - pinecone environment where index is stored
-                namespace (string) - pinecone namespace
-                filename (string) - filename
-                text (string) - document text
-
-        output: content - Dict with 2 keys: 
-                        status - confirms if index was successfully uploaded or not (True/False)
-                        message - contains string stating if documents were sucessfully uploaded or failed with failure message.
-    """
     pine_api_key = os.environ.get('PINECONE_API')
     openai.api_key = os.environ.get('OPEN_API')
     embedding_model = "text-embedding-ada-002"
@@ -93,9 +80,8 @@ def upload_factcheck_documents_worker(logger, worker_name, req_queue, res_queue,
     sessionId = UploadFactcheckDocumentRequest['factcheckSessionId']
     index = UploadFactcheckDocumentRequest['index']
     pine_env = UploadFactcheckDocumentRequest['environment']
-    namespace = UploadFactcheckDocumentRequest['namespace']
-    filename = UploadFactcheckDocumentRequest['filename']
-    text = UploadFactcheckDocumentRequest['text']
+    namespace = UploadFactcheckDocumentRequest.get('namespace', None)
+    documents = UploadFactcheckDocumentRequest['documents']
 
     response_data = {}
     if 'boxEndpoint' in UploadFactcheckDocumentRequest:
@@ -105,26 +91,29 @@ def upload_factcheck_documents_worker(logger, worker_name, req_queue, res_queue,
     response_data['redisKey'] = 'coachworker_res_factcheckupload_' + sessionId
     response_data['deleteRedisKey'] = 'coachworker_req_factcheckupload_' + sessionId
 
+    current_filename = None
+
     try:
         pineindex = pinecone_init(pine_api_key,pine_env,index)
-        content = document_upsert_pinecone(openai, embedding_model, pineindex, None, filename, text)
-        logger.info(content['message'])
+
+        for document in documents:
+          current_filename = document["filename"]
+          content = document_upsert_pinecone(openai, embedding_model, pineindex, namespace, current_filename, document["text"])
+          logger.info(f'Uploading {current_filename} to Pinecone index {index} in environment {pine_env}/{namespace}: {content["message"]}')
+
         response_data['json'] = {
             "method": "upload_factcheck_documents",
             "status": "finished",
-            "factcheckSessionId": sessionId,
-            "filename": filename,
-            "content": content
+            "factcheckSessionId": sessionId
         }
         res_queue.put((response_data,))
     except Exception as error:
-        logger.error(f'Uploading to Pinecone index {index} in environment {pine_env}/{namespace} failed: {format(error)}')
+        logger.error(f'Uploading {current_filename} to Pinecone index {index} in environment {pine_env}/{namespace} failed: {format(error)}')
         response_data['json'] = {
             "method": "upload_factcheck_documents",
             "status": "failed",
             "factcheckSessionId": sessionId,
-            "filename": filename,
-            "err": f'Uploading to index {index} in environment {pine_env}/{namespace} failed: {format(error)}'
+            "err": f'Uploading {current_filename} to index {index} in environment {pine_env}/{namespace} failed: {format(error)}'
         }
         res_queue.put((response_data,))
 
@@ -140,6 +129,59 @@ def upload_factcheck_documents(UploadFactcheckDocumentRequest):
       'message': "Started uploading documents to index.",
       'factcheckSessionId': sessionId
     }
+
+def create_sample_queries_worker(logger, worker_name, req_queue, res_queue, err_queue, CreateFactcheckSampleQueriesRequest):
+    openai.api_key = os.environ.get('OPEN_API')
+
+    sessionId = CreateFactcheckSampleQueriesRequest['factcheckSessionId']
+    documents = CreateFactcheckSampleQueriesRequest['documents']
+
+    response_data = {}
+    if 'boxEndpoint' in CreateFactcheckSampleQueriesRequest:
+        response_data['boxEndpoint'] = CreateFactcheckSampleQueriesRequest['boxEndpoint']
+        response_data['header'] = { "content-type": "application/json" }
+
+    response_data['redisKey'] = 'coachworker_res_createsamplequeries_' + sessionId
+    response_data['deleteRedisKey'] = 'coachworker_req_createsamplequeries_' + sessionId
+
+    current_filename = None
+
+    try:
+        sample_queries = ["query1", "query2"]
+        for document in documents:
+          current_filename = document["filename"]
+          logger.info(f'Created sample queries for {current_filename}: {sample_queries}')
+
+        response_data['json'] = {
+            "method": "create_sample_queries",
+            "status": "finished",
+            "factcheckSessionId": sessionId,
+            "sample_queries": sample_queries
+        }
+        res_queue.put((response_data,))
+    except Exception as error:
+        logger.error(f'Creating sample queries for {current_filename} failed: {format(error)}')
+        response_data['json'] = {
+            "method": "create_sample_queries",
+            "status": "failed",
+            "factcheckSessionId": sessionId,
+            "err": f'Creating sample queries for {current_filename} failed: {format(error)}'
+        }
+        res_queue.put((response_data,))
+
+
+def create_sample_queries(CreateFactcheckSampleQueriesRequest):
+    sessionId = CreateFactcheckSampleQueriesRequest['factcheckSessionId']
+
+    with current_app.app_context():
+        req_queue = current_app.req_queue
+        req_queue.put((CreateFactcheckSampleQueriesRequest, "create_sample_queries"))
+
+    return {
+      'status': 'queued',
+      'message': "Started creating sample queries.",
+      'factcheckSessionId': sessionId
+    }    
 
 def factcheck(factcheckRequest):
     """
@@ -159,11 +201,11 @@ def factcheck(factcheckRequest):
 
     index = factcheckRequest['index']
     pine_env = factcheckRequest['environment']
-    namespace = factcheckRequest['namespace']
+    namespace = factcheckRequest.get('namespace', None)
     statement = factcheckRequest['statement']
 
     pineindex=pinecone_init(pine_api_key,pine_env,index)
-    editor_responses, agreement_gates, status =editor(openai, statement, pineindex, None)
+    editor_responses, agreement_gates, status = editor(openai, statement, pineindex, namespace)
    
     result = {  'status': status,
                 'reasoning': agreement_gates,
